--- a/carreras.html
+++ b/carreras.html
@@ -122,6 +122,7 @@
         <div class="container">
             <p>Facultad de Derecho – UNR</p>
             <p>© 2026 Franja Morada FDER</p>
+            <p>© Desarrollado por Nehuen_Pey</p>
         </div>
     </footer>
 
