--- a/abogacia.html
+++ b/abogacia.html
@@ -205,6 +205,7 @@
         <div class="container">
             <p>Facultad de Derecho – UNR</p>
             <p>© 2026 Franja Morada FDER</p>
+            <p>© Desarrollado por Nehuen_Pey</p>
         </div>
     </footer>
 
