--- a/consejo_directivo.html
+++ b/consejo_directivo.html
@@ -209,6 +209,7 @@
         <div class="container">
             <p>Facultad de Derecho – UNR</p>
             <p>© 2026 Franja Morada FDER</p>
+            <p>© Desarrollado por Nehuen_Pey</p>
         </div>
     </footer>
 
