--- a/codigos.html
+++ b/codigos.html
@@ -187,7 +187,12 @@
         <div class="container">
             <p>Facultad de Derecho – UNR</p>
             <p>© 2026 Franja Morada FDER</p>
-            <p>© Desarrollado por Nehuen_Pey</p>
+            <p class="footer-dev">
+                © Desarrollado por
+                <a href="https://instagram.com/nehuen_peyrano" target="_blank" aria-label="Instagram">
+                      Nehuén_Peyrano
+                </a>
+            </p>
         </div>
     </footer>
 
